--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,78 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground: 23 37 84;
+    --background: 255 255 255;
+
+    --first: 30 64 175;
+    --second: 30 58 138;
+
+    /* @apply text-blue-500; */
+    --link: 48 115 240;
+    --hover: 248 250 252;
+
+    --border: 212 212 216;
+    --radius: 0.5rem;
+
+    --text-gradient: linear-gradient(
+      180deg,
+      rgb(59, 130, 246),
+      rgb(37, 99, 235)
+    );
+    --profile-blur: rgba(0, 147, 255, 0.56);
+  }
+
+  .dark {
+    --foreground: 161 161 170;
+    --background: 0 0 0;
+
+    --first: 255 255 255;
+
+    --second: 250 250 250;
+
+    --link: 37 99 235;
+    --hover: 24 24 27;
+
+    --border: 63 63 70;
+
+    --text-gradient: linear-gradient(180deg, #fff, #adadad);
+    --profile-blur: rgba(119, 119, 119, 0.745);
+  }
+
+  .text-gradient {
+    background: var(--text-gradient);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .profile-blur {
+    box-shadow: 0px 0px 400px 20px var(--profile-blur);
+    -webkit-box-shadow: 0px 0px 400px 20px var(--profile-blur);
+    -moz-box-shadow: 0px 0px 400px 20px var(--profile-blur);
+  }
+
+  .clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@layer base {
+  * {
+    @apply border-border;
+    border-color: rgb(var(--border));
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  .link {
+    @apply text-sm text-link hover:underline xs:text-base;
   }
 }
